k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: northstar-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  rules:
    - host: jira.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: northstar-app
                port:
                  number: 80
          - path: /v1/graphql
            pathType: Prefix
            backend:
              service:
                name: hasura
                port:
                  number: 8080
